# SPOCK

./: .gitignore  README.md  config.yaml  debug_phases.py  demo.py  main.tex  pyproject.toml  requirements.txt  test_deep_methods.py  test_scalability.py
config/: tuned_params.json
experiments/: __init__.py  run_ablation.py  run_experiments.py  run_optuna_tuning.py  run_scalability.py  run_sensitivity.py  tune_all_datasets.py
spock/: __init__.py
spock/baselines/: __init__.py  deep_methods.py  methods.py  scalable_methods.py
spock/core/: __init__.py  spock_algorithm.py
spock/datasets/: __init__.py  download.py  loaders.py
spock/evaluation/: __init__.py  metrics.py
