[project]
name = "spock"
version = "1.0.0"
description = "SPOCK: Scalable and Structure-Preserving Optimal Transport based Clustering with Kernel-density-estimation for Imperfect Multi-View Data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "SPOCK Authors" }
]
keywords = ["clustering", "multi-view", "optimal-transport", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "pandas>=1.3.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
# GPU support with PyTorch
torch = [
    "torch>=1.10.0",
]
# Fast approximate nearest neighbors
faiss = [
    "faiss-cpu>=1.7.0",
]
# Optimal Transport library
ot = [
    "pot>=0.8.0",
]
# Hyperparameter tuning
tuning = [
    "optuna>=3.0.0",
]
# Full installation with all optional dependencies
full = [
    "torch>=1.10.0",
    "faiss-cpu>=1.7.0",
    "pot>=0.8.0",
    "optuna>=3.0.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "optuna>=3.0.0",
]

[project.scripts]
spock-demo = "demo:main"
spock-experiment = "experiments.run_experiments:main"
spock-ablation = "experiments.run_ablation:main"
spock-sensitivity = "experiments.run_sensitivity:main"
spock-scalability = "experiments.run_scalability:main"
spock-tune = "experiments.run_optuna_tuning:main"

[project.urls]
Homepage = "https://github.com/spock-authors/spock"
Documentation = "https://github.com/spock-authors/spock#readme"
Repository = "https://github.com/spock-authors/spock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spock"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data
    | results
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["spock"]
skip = [".git", ".venv", "data", "results"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["data", "results", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
